# Boggle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: linux_build.yml  windows_build.yml
benchmark/: CMakeLists.txt  bm_BoggleSolver.cpp
cmake/: Benchmarking.cmake  UnitTest.cmake
resources/: basic_english_words_2000.txt  doublet_words_5557.txt
src/: CMakeLists.txt  main.cpp
src/BoggleBoard/: BoggleBoard.cpp  BoggleBoard.h  CMakeLists.txt
src/BoggleSolver/: BoggleSolver.cpp  BoggleSolver.h  CMakeLists.txt
src/Dictionary/: CMakeLists.txt  Dictionary.cpp  Dictionary.h
test/: CMakeLists.txt  test_BoggleBoard.cpp  test_BoggleSolver.cpp  test_Dictionary.cpp
